syntax = "proto3";

package billing;

option java_multiple_files = true;
option java_package = "billing";


service BillingService {
  rpc createBillingAccount (BillRequest) returns (BillResponse);
}

message BillRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillResponse {
  string accountId = 1;
  string status = 2;
}
