package com.pm.patient_service.grpc;

import billing.BillRequest;
import billing.BillingServiceGrpc;
import billing.BillResponse;
import com.google.api.Billing;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import org.hibernate.engine.spi.Managed;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.stereotype.Service;

@Service
public class BillingServiceGrpcClient {

    private  static  final Logger log =  LoggerFactory.getLogger(BillingServiceGrpcClient.class);
    private final BillingServiceGrpc.BillingServiceBlockingStub blockingStub  ;

    public BillingServiceGrpcClient(
            @Value("${billing.service.address:localhost}") String serverAddress,
            @Value("${billing.service.grpc.port:9001") int serverPort ){

        log.info("connetion serveraddress at "+serverAddress+ " at port "+serverPort);
        ManagedChannel channel = ManagedChannelBuilder.forAddress(serverAddress,serverPort)
                .usePlaintext().build();
        // creating a channel for every new patient

        blockingStub = BillingServiceGrpc.newBlockingStub(channel);
        // here blockingStub is act as client in future ;
    }

    public BillResponse  createBillingAccount ( String patientId,String name , String email){
        BillRequest request = BillRequest.newBuilder()
                .setEmail(email).setName(name).setPatientId(patientId)
                .build();

        // craft request ;
        BillResponse response = blockingStub.createBillingAccount(request);
        // loaded request in respone as client as blockingStub;
        log.info("received response billing service from GRPC     "+ response);
        return response;


    }




}
